# walnuts

./: .clang-format  .gitignore  CMakeLists.txt  README.md  arena_matrix.hpp  bernoulli_test.cpp  macros.hpp  memory.hpp  nuts.hpp  pmr_arena_matrix.hpp  refs.bib  test.cpp  test_stan.cpp  tsan_suppressions.txt  walnuts
.github/workflows/: ci.yml
cli/: README.md  walnuts.cpp
cmake/: iwyu.imp  run-iwyu.sh
docs/: refs.bib
examples/: CMakeLists.txt  README.md  adapt_monitor.cpp  check_mcse.hpp  diag_scale_target.stan  eval-nuts.py  eval-stan.py  eval_stan.cpp  eval_walnuts.cpp  examples.cpp  examples_stan.cpp  independent-normal-eval.py  load_stan.hpp  new_rhat_monitor.cpp  plot-discount.py  plot-grads.py  reference-moments.py  reference-size-error-ess.py  reference-size-error-plot.py  reference-size-error.py  rhat_monitor.cpp  stan-warmup.py  stan_cli.cpp  summary-example.cpp  summary.cpp  targets.hpp  test-welford.cpp  test.cpp  test_dual_averaging.cpp  test_stan.cpp  util.py  walnuts-api.cpp  walnuts-gradients-to-error.py  walnuts-stationarity.cpp  walnuts-stationarity.py  walnuts-warmup.cpp  walnuts-warmup.py  walnuts_api.cpp  walnuts_examples.cpp
examples/models/: README.md
examples/models/corr-normal/: corr-normal-data.json  corr-normal.stan
examples/models/dirichlet/: dirichlet-data.json  dirichlet.stan
examples/models/funnel/: funnel-data.json  funnel-data.py
examples/models/german-credit/: data-to-json.py  german-credit-data.json  german-credit.stan
examples/models/ill-normal/: ill-normal-data.json  ill-normal.stan
examples/models/meas-err/: meas-err-data.json  meas-err-marginal.stan  meas-err.stan
examples/models/park/: park  park-data.json  park.stan
examples/models/park-nc/: park-nc  park-nc.stan
extras/: readme.md
include/: walnuts.hpp
include/walnuts/: adam.hpp  adapt.hpp  adaptive_walnuts.hpp  api.hpp  attributes.hpp  concepts.hpp  config.hpp  dual_average.hpp  dual_averaging.hpp  handlers.hpp  nuts.hpp  online_moments.hpp  padded.hpp  preconditioner.hpp  rhat_monitor.hpp  sampler.hpp  spsc_buffer.hpp  summary.hpp  triple_buffer.hpp  util.hpp  validate.hpp  walnuts.hpp  welford.hpp
include/walnuts/legacy/: nuts.hpp
iwyu/: iwyu.imp  run-iwyu.sh
tests/: CMakeLists.txt  combine_span_test.cpp  config_test.cpp  dual_average_test.cpp  mock_test.cpp  online_moments_test.cpp  span_test.cpp  summary_test.cpp  test_runner.cpp  test_util.hpp  util_test.cpp  welford_test.cpp
tests/CMake/: BoostUT.cmake  BoostUTAddTests.cmake
